--- a/C_gigas/code/17-spur-genesym.ipynb
+++ b/C_gigas/code/17-spur-genesym.ipynb
@@ -106,9 +106,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10117\tCAA68565\tECB-GENE-23140194\tmyp\n",
+      "1015415\tAAA79058\tECB-GENE-23061998\tLOC580684\n",
+      "1015417\tAAA79059\tECB-GENE-23151755\tLOC373418\n",
+      "1016080576\tNP_999775\tECB-GENE-23088426\tSM50\n",
+      "10233\tCAA28385\tECB-GENE-23163644\tH2B-1\n",
+      "10234\tCAA28384\tECB-GENE-23163644\tH2B-1\n",
+      "10236\tCAA29850\tECB-GENE-23091443\tLOC373349\n",
+      "10237\tCAA29851\tECB-GENE-23091438\tLOC373348\n",
+      "10239\tCAA29848\tECB-GENE-23070058\tLOC373347\n",
+      "10242\tCAA29847\tECB-GENE-23036710\tLOC373346\n"
+     ]
+    }
+   ],
    "source": [
     "!head ../data/NcbiProteinEchinobaseGene_Spur.txt\n"
    ]
