--- a/C_gigas/code/14.2-joining-annotations.Rmd
+++ b/C_gigas/code/14.2-joining-annotations.Rmd
@@ -2,17 +2,11 @@
 title: "14.1-joining-annotations"
 output: html_document
 ---
----
-title: "14-joining-annotations"
-output: html_document
----
 
 ```{r}
 library(tidyverse)
 ```
-```{bash}
-pwd
-```
+
 
 Bringing in the list of 46753 CDS IDs
 
@@ -20,25 +14,18 @@ Bringing in the list of 46753 CDS IDs
 cdslist <- read.csv("../analyses/GCF_000297895_cdslist.tab", header = FALSE)
 ```
 
-UNIPROT (but need to redo!!! - end premature)
  
 ```{r}
-uniprot <- read.csv("../analyses/Cg-uniprot_blastx_02.tab", header = FALSE, sep="\t") %>%
+uniprot <- read.csv("../analyses/Cg-blastx-sp.tab.txt", header = FALSE, sep="\t") %>%
   distinct(V1, .keep_all = TRUE)
 ```
 
 
-SPUR Protein hits
+
+Spur blastx wit gene symbols
 
 ```{r}
-spur <- read.csv("../analyses/Cg-ProteinsSpur5.0_blastx.tab", header = FALSE, sep="\t") %>%
-  distinct(V1, .keep_all = TRUE)
-```
-
-SPUR nucleotide
-```{r}
-spurn <- read.csv("../analyses/Cg-SpurCDS_blastn.tab", header = FALSE, sep="\t") %>%
-  distinct(V1, .keep_all = TRUE)
+spurLOC <- read.csv("../analyses/Spur-blastx-LOCsym.tab", header = TRUE, sep="\t")
 ```
 
 
@@ -73,13 +60,14 @@ celsym <- read.csv("../analyses/Cg_Ce-genesym.tab", header = FALSE, sep="\t")
 JOIN
 
 ```{r}
-comb <- left_join(cdslist, uniprot, by = "V1") %>%
-left_join(spur, by = "V1") %>%
-left_join(spurn, by = "V1") %>%
+comb <- left_join(cdslist, uniprot, by = "V1")  %>%
+left_join(spurLOC, by = c("V1" ="V1.x")) %>%
 left_join(dmel, by = "V1") %>%
 left_join(celsym, by = c("V1" = "V2")) %>%
-select(V1, V2.x, V11.x, V2.y, V11.y, V2.x.x, V3.x.x, V2.y.y, V3.y.y, V1.y, V3, V4) %>%
-rename(cdsID = V1, uniprot = V2.x, u_ev = V11.x, spur = V2.y, s_ev = V11.y, spurN = V2.x.x, spurN_ev = V3.x.x, dmel = V2.y.y, dmel_ev = V3.y.y, cel_ID = V1.y, cel_ev = V3, cel_sym = V4)
+select(V1, V2.x, V3.x, V2.x.x, V11, V1.y, V3.y, V4.x, V2.y.y, V3.x.x,
+V1.y.y, V3.y.y, V4.y) %>% 
+rename(cdsID = V1, uniprot = V2.x, u_ev = V3.x, spurAcc
+= V2.x.x, s_ev = V11, spID02 = V1.y, sp_ecb = V3.y, sp_sym = V4.x, dmel = V2.y.y, dmel_ev = V3.x.x, cel_ID = V1.y.y, cel_ev = V3.y.y, cel_sym = V4.y)
 ```
 
 
@@ -110,7 +98,7 @@ loc_dt <- left_join(loc, comb_g, by = c("V1" = "cdsID"))
 ```{r}
 write_tsv(
   loc_dt,
-  "../analyses/Cg-annot-join-V1.1.tab"
+  "../analyses/Cg-annot-join-V1.2.tab"
 )
 
 ```
@@ -125,7 +113,7 @@ top <- read.csv("../data/topmarker_bla_mitov7_top10perCluster.txt", header = TRU
 
 
 ```{r}
-annot <- read.csv("../analyses/Cg-annot-join-V1.1.tab", header = TRUE, sep = "\t")
+annot <- read.csv("../analyses/Cg-annot-join-V1.2.tab", header = TRUE, sep = "\t")
 ```
 
 ```{r}
@@ -134,14 +122,14 @@ library(tidyverse)
 
 
 ```{r}
-top.annotv1.1 <- left_join(top, annot, by = c("gene_id" = "V2"))
+top.annotv1.2 <- left_join(top, annot, by = c("gene_id" = "V2"))
 ```
 
 
 ```{r}
 write_tsv(
-  top.annotv1.1,
-  "../analyses/top.annotv1.1.tab"
+  top.annotv1.2,
+  "../analyses/top.annotv1.2.tab"
 )
 
 ```
