--- a/O_lurida/code/05-dml-cov.Rmd
+++ b/O_lurida/code/05-dml-cov.Rmd
@@ -3,12 +3,7 @@ title: "03-methylkit"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-
-
-# Trying Yaamini's code, using evidence.cov
+# Yaamini's code, using evidence.cov
 
 
 https://gannet.fish.washington.edu/seashell/bu-mox/scrubbed/060321-oly/8_ACTTGA.CpG_report.merged_CpG_evidence.cov
@@ -58,69 +53,14 @@ myobj_02 = methRead(location = cov.list,
 ```
 
 
-```{r}
-getMethylationStats(myobj_02[[3]],plot=TRUE,both.strands=FALSE)
 
-```
-
-
-```{r}
-myobj_lowCov = methRead(cov.list,
-           sample.id = list("1","2","3","4","5","6","7","8"),
-           assembly="v081",
-           treatment = c(0,0,0,0,1,1,1,1),
-           pipeline = "bismarkCoverage",
-           context="CpG",
-           mincov = 3
-           )
-
-```
-```{r}
-tiles = tileMethylCounts(myobj_lowCov,win.size=1000,step.size=1000,cov.bases = 10)
-head(tiles[[1]],3)
-```
-
-
-```{r}
-save(tiles, file = "../analyses/tiles_01")
-```
-
-```{r}
-save(tiles02, file = "../analyses/tiles_02")
-```
-
-
-
-
-```{r}
-getMethylationStats(tiles02[[4]],plot=TRUE,both.strands=FALSE)
-
-```
-
-```{r}
-filtered.tiles=filterByCoverage(tiles02,lo.count=NULL,lo.perc=NULL,
-                                      hi.count=100,hi.perc=NULL)
-tiles_filter=unite(filtered.tiles, min.per.group=3L, destrand=TRUE)
-
-clusterSamples(tiles_filter, dist="correlation", method="ward", plot=TRUE)
-
-
-PCASamples(tiles_filter)
-
-```
-
-
-```{r}
-myDiff.tile=calculateDiffMeth(tiles,mc.cores=8)
-
-```
 
 
 ```{r}
 filtered.myobj=filterByCoverage(myobj_02,lo.count=2,lo.perc=NULL,
                                       hi.count=NULL,hi.perc=99.9)
 
-meth_filter=unite(filtered.myobj, min.per.group=1L, destrand=TRUE)
+meth_filter=unite(filtered.myobj, min.per.group = 1L, destrand=TRUE)
 
 clusterSamples(meth_filter, dist="correlation", method="ward", plot=TRUE)
 
