going deeper with crabs

--- a/C_bairdi/code/03-Exploring3-1.ipynb
+++ b/C_bairdi/code/03-Exploring3-1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "987656b6-e6f7-49ec-b700-3ab3b2df1945",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,8 @@
      "text": [
       "cbai_transcriptome_v3.1.blastx.outfmt6.txt\n",
       "hematqpcr_crabRNA.csv\n",
-      "tx135491-prot.fasta\n"
+      "tx135491-prot.fasta\n",
+      "uniprot-reviewed-20210901.tab\n"
      ]
     }
    ],
@@ -57,11 +58,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "30b0dc24-e1c2-4a19-b2a8-672d4b824420",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   50038 ../data/cbai_transcriptome_v3.1.blastx.outfmt6.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wc -l ../data/cbai_transcriptome_v3.1.blastx.outfmt6.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0275db7b-2980-45b8-bbb3-1179b12b1458",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!head ../data/um"
+   ]
   }
  ],
  "metadata": {
