--- a/C_bairdi/code/04-exploring-3.1-deeper.Rmd
+++ b/C_bairdi/code/04-exploring-3.1-deeper.Rmd
@@ -1,28 +1,30 @@
 ---
 title: "04-exploring-3.1-deeper"
-output: html_document
+output:
+  md_document:
+    variant: markdown_github
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+# We have a blast table and some Uniprot data... lets see what the R can do..
+
+```{r}
+library(tidyverse)
 ```
 
-## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+```{r}
+blast <- read.csv("../data/cbai_transcriptome_v3.1.blastx.outfmt6.txt", header = FALSE, sep="\t") %>%
+  separate(col = V2, into = c("sp", "Accession_ID", "Gene"), sep = "\\|")
+  
 
-```{r cars}
-summary(cars)
+
+head(blast)
 ```
 
-## Including Plots
+```{r}
+up <- read.csv("../data/uniprot-reviewed-20210901.tab", header = TRUE, sep="\t")
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+head(up)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
