--- a/C_gigas/code/60-allgig-methylkit.Rmd
+++ b/C_gigas/code/60-allgig-methylkit.Rmd
@@ -1,28 +1,19 @@
 ---
 title: "60-allgig-methylkit"
-output: html_document
+output: github_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+
+```{r}
+library(methylKit)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{bash}
+/opt/homebrew/bin/wget -r \
+--no-check-certificate \
+--quiet \
+--no-directories --no-parent \
+-P ../bg_data/ \
+-A *sorted.bam \
+https://gannet.fish.washington.edu/seashell/bu-mox/scrubbed/061021-big/
 ```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
