code for gigall object

--- a/C_gigas/code/60-allgig-methylkit.Rmd
+++ b/C_gigas/code/60-allgig-methylkit.Rmd
@@ -78,9 +78,9 @@ file.list_allgig=list('/media/1TB_ext_SSD01/sr320/wd/0501_R1_bismark_bt2_pe.dedu
 
 ```{r eval=FALSE, include=FALSE}
 myobj_all = processBismarkAln(location = file.list_allgig,
-  sample.id = list("0501","0502","0503","3501","3501","3502","3503","5901", "5902","5903","39F","3F","41F","44F","48F","50F","52F","53F","54F","59M","64M","6M","76F", "77F","7M","9M"),
+  sample.id = list("0501","0502","0503","3501","3501","3502","3503","5901", "5902","5903","zr3534_10","zr3534_1","zr3534_2","zr3534_3","zr3534_4","zr3534_5","zr3534_6","zr3534_7","zr3534_8","zr3534_9","zr3644_10","zr3644_11","zr3644_12","zr3644_13","zr3644_14","zr3644_15","zr3644_16","zr3644_17","zr3644_18","zr3644_19","zr3644_1","zr3644_20","zr3644_21","zr3644_22","zr3644_23","zr3644_24","zr3644_2","zr3644_3","zr3644_4","zr3644_5","zr3644_6","zr3644_7","zr3644_8","zr3644_9","zrtg3616_1","zrtg3616_2","zrtg3616_3","zrtg3616_4","zrtg3616_5","zrtg3616_6","zrtg3616_7","zrtg3616_8"),
   assembly = "cv",
   read.context="CpG",
   mincov=2,
-  treatment = c(3,1,2,2,4,3,4,3,4,4,2,4,4,2,3,4,2,2,2,3,1,1,2,4,1,3))
+  treatment = c(0,0,0,0,0,0,0,0,0,0,0,0,1,1,1,1,1,1,1,1,1,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,3,3,3,3,3,3,3,3))
 ```
